--- a/NetSnifferApp/NetSnifferApp.csproj
+++ b/NetSnifferApp/NetSnifferApp.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IpData" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\NetSnifferLib\NetSnifferLib.csproj" />
   </ItemGroup>
 
