Move web info to new project

--- a/NetSnifferApp/NetSnifferApp.csproj
+++ b/NetSnifferApp/NetSnifferApp.csproj
@@ -8,10 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IpData" Version="1.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\NetSnifferLibWebApi\NetSnifferLibWebInfo.csproj" />
     <ProjectReference Include="..\NetSnifferLib\NetSnifferLib.csproj" />
   </ItemGroup>
 
