--- a/NetSnifferApp/NetSnifferApp.csproj
+++ b/NetSnifferApp/NetSnifferApp.csproj
@@ -31,4 +31,8 @@
     <Folder Include="Properties\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+  </ItemGroup>
+
 </Project>
